# Image-Processing-Service

./: README.md  compose.yml  dockerfile  pyproject.toml
.github/workflows/: test.yml
alembic/: env.py
alembic/versions/: 16288dfe1b32_add_image_model.py  62bb2cbf6eee_initial_migration.py
app/: main.py
app/aws/: s3_client.py
app/core/: config.py  exception_handler.py  exceptions.py  security.py
app/db/: database.py
app/dependencies/: account_dependency.py  auth_dependency.py  image_dependency.py  permit_dependency.py
app/models/: account_model.py  image_model.py
app/repositories/: account_db_repository.py  account_repository.py  image_db_repository.py  image_s3_repository.py
app/routers/: account_router.py  auth_router.py  image_router.py  permit_router.py
app/schemas/: account_schema.py  image_schema.py  token_schema.py
app/services/: account_service.py  auth_service.py  image_service.py  permit_service.py
tests/: conftest.py
tests/fixtures/: account_fixture.py  auth_fixture.py  image_fixture.py  permit_fixture.py
tests/repositories/: image_db_repository.py  test_account_repository.py  test_image_db_repository.py  test_image_s3_repository.py
tests/routers/: test_account_router.py  test_auth_router.py  test_image_router.py  test_permit_router.py
tests/services/: test_account_service.py  test_auth_service.py  test_image_service.py  test_permit_service.py
