[build-system]
requires = ["setuptools>=82.0.1", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "Image-Processing-Service"
version = "0.1.0"
description = "Image processing service built in Python and FastAPI"
readme = "README.md"
requires-python = ">=3.14"
authors = [
  {name = "Ernest"}
]

dependencies = [
  "alembic>=1.13.0",
  "fastapi>=0.136.0",
  "pydantic[email]>=2.13.1",
  "pydantic_settings>=2.14.1",
  "python-dotenv>=1.2.2",
  "redis>=7.4.0",
  "slowapi>=0.1.9",
  "SQLAlchemy>=2.0.49",
  "asyncpg>=0.31.0",
  "uvicorn>=0.27.0",
  "pwdlib[argon2]>=0.3.0",
  "pyjwt>=2.13.0",
  "python-multipart",
  "boto3>=1.43.36"
]

[project.optional-dependencies]

test = [
  "pytest>=9.0.2",
  "testcontainers>=4.14.2",
  "httpx>=0.27.0"
]

[tool.setuptools]
packages = ["app"]

[tool.pytest.ini_options]

testpaths = ["tests"]

addopts = "-ra -q --strict-markers"

markers = [
  "unit: marks tests as unit tests",
  "integration: marks tests as integration tests (requires Docker Testcontainers)"
]

pythonpath = ["."]